--- a/index.html
+++ b/index.html
@@ -6,22 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <style>
-        h1 {
-            background-color: black;
-            color: orange;
-        }
-        
-        .bold-me {
-            font-size: 2em;
-            font-weight: bolder;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
-    <h1>Hello Codeworks!</h1>
-    <p class="bold-me">This is me saying "Hello, Codeworks!"</p>
+
+    <head>
+        <div class="banner">
+            <h1>Hey there I have a cool site</h1>
+            <br>
+        </div>
+
+    </head>
+    <div class="article">
+        <div class="colorbar"></div>
+        <div class="secondheader">
+            <h2>Why Designers are important!</h2>
+            <p><strong>Lorem ipsum</strong> dolor, sit amet consectetur adipisicing elit. Illum vero neque eaque ad quidem, reprehenderit dignissimos eveniet minima ipsa quas vitae hic officia voluptatum, ducimus magnam porro quis eius expedita velit ea
+                odio dolore tempore. Ut, magnam. Suscipit, veritatis, cupiditate amet adipisci magnam quis laudantium ad possimus nostrum eum ducimus quos corporis ullam nisi eaque reiciendis </p>
+            <p><strong>Lorem ipsum</strong> dolor, sit amet consectetur adipisicing elit. Illum vero neque eaque ad quidem, reprehenderit dignissimos eveniet minima ipsa quas vitae hic officia voluptatum, ducimus magnam porro quis eius expedita velit ea
+                odio dolore tempore. Ut, magnam. Suscipit, veritatis, cupiditate amet adipisci magnam quis laudantium ad possimus nostrum eum ducimus quos corporis ullam nisi eaque reiciendis </p>
+
+
+        </div>
+    </div>
+    <div class="sidebar">
+        <img src="https://placehold.it/200x200" width="200" height="200" Alt="img of img here">
+        <h3>Another Article</h3>
+        <p>Lorem ipsum dolor sit amet consectetur.</p>
+    </div>
+
+    <footer>
+
+    </footer>
+
+
 </body>
 
 </html>
